Updated home and translations page.

--- a/translations.html
+++ b/translations.html
@@ -14,7 +14,7 @@ title: Dharma Pearls | Translations
       <li><a class="title" href="01_agama/dirgha/">The Long Discourses</a> (Skt. <em>Dīrgha-āgama</em>, T 1)</li>
       <li>Extracts from the <span class="title">Śāriputra Abhidharma</span> (T 1548)</li>
     </ul>
-    <li><strong>Sarvâstivāda Sūtras</strong></li>
+    <li><strong>Sarvāstivāda Sūtras</strong></li>
     <ul class="list-style-disc no-indent">
       <li><a class="title" href="01_agama/madhyama/">The Medium Discourses</a> (Skt. <em>Madhyama-āgama</em>, T 26)</li>
       <li><a class="title" href="01_agama/samyukta/">The Related Discourses</a> (Skt. <em>Saṃyukta-āgama</em>, T 99)</li>
@@ -31,7 +31,17 @@ title: Dharma Pearls | Translations
       <li><strong>Illuminations</strong> (Skt. <em>Udāna</em>, T 212)</li>
     </ul>
   </ul>
-  <p>While there are many other early Buddhist texts in Chinese, this initial set of texts comprise a total of 1,422 pages of the Taisho, which will probably translate to around 1.7 million words of English. As a result, this project is expected to require several years to complete.</p>
+  <p>While there are many other early Buddhist texts in Chinese, this initial set of texts comprise a total of 1,422 pages of the Taisho, which will probably translate to around 1.7 million words of English. As a result, this project is expected to require <span style="text-decoration:line-through">several</span> many years to complete.</p>
+  <hr style="margin-top: 2em; margin-bottom: 2em;" />
+  <h2>Progress Report</h2>
+    <p>At the end of 2023, 25% of the Four Āgamas have been successfully translated and released in English. This includes:</p>
+    <ul>
+      <li>100% of the <cite>Dīrgha Āgama</cite></li>
+      <li>19% of the <cite>Madhyama Āgama</cite></li>
+      <li>8% of the <cite>Saṃyukta Āgama</cite></li>
+      <li>15% of the <cite>Ekottarika Āgama</cite></li>
+    </ul>
+    <p>In all, 292 pages of the <cite>Taisho</cite> have been translated, which is approximately 350,000 words of English (assuming 1 page = 1,200 words on average). </p>
 <hr style="margin-top: 2em; margin-bottom: 2em;" />
   <h2>Project Roadmap</h2>
 
@@ -43,19 +53,25 @@ title: Dharma Pearls | Translations
     <p>In early 2020, the project shifted to a concerted effort to translate the portion of the <em>Madhyama Āgama</em> that had yet to be published by <a href="https://bdkamerica.org/tripitaka-list/">BDK</a> (only <a href="https://bdkamerica.org/product/the-madhyama-agama-middle-length-discourses-volume-i/">Vol. I of their translation</a> was available at the time).
     <p>Funding was secured for a full-time translation project in mid-2020. The initial goal was to translate the Chinese Āgama parallels for a selection of important Pali suttas. This work continued until 2021.</p>
 <hr style="margin-top: 2em; margin-bottom: 2em; margin-left: auto; margin-right: auto; width: 33%;" />
-  <h3>Phase 3: Translation of the <em>Dīrgha Āgama</em> (2021-2022)</h3>
+  <h3>Phase 3: Translation of the <cite>Dīrgha Āgama</cite> (2021-2022)</h3>
     <p>After the completion of the initial parallels translation, a more ambitious goal of translating the entire <em>Dīrgha Āgama</em> was approved, and funding was extended into 2022.</p>
-    <p>As of September 2021, 21 DĀ sutras have been translated and released, amounting to close to 40% of the entire collection by length. The current schedule for the remainder of the <em>Dīrgha Āgama</em> is as follows (give or take a month or two):
-      <ul class="list-style-none">
-        <li>September 2021: DĀ 3, 14, 15, 17</li>
-        <li>October 2021: DĀ 7, 10, 23</li>
-        <li>November 2021: DĀ 1</li>
-        <li>December 2021: DĀ 2, 19</li>
-        <li>January-February 2022: DĀ 30</li>
-      </ul>
-      <p>Update (March 30): The schedule has slipped a couple months into the future. DĀ 1, 2, 19, and 30 are expected to be released by the end of May 2022.</p>
+    <p>This phase of the project was completed in July 2022.</p>
       <hr style="margin-top: 2em; margin-bottom: 2em; margin-left: auto; margin-right: auto; width: 33%;" />
-  <h3>Phase 4: Translation of the <em>Ekottarika Āgama</em> (2022-2024?)</h3>
-    <p>With the completion of Phase 3 approaching on the horizon, tentative plans are in place to take up the <em>Ekottarika Āgama</em> as the next major project. If the needed funding can be secured, this should begin in Summer of 2022 and continue to early 2024.</p>
+  <h3>Phase 4: Translation of the <em>Ekottarika Āgama</em> (2022-2023)</h3>
+    <p>With the completion of Phase 3, the Project moved its focus to the <em>Ekottarika Āgama</em>, beginning in earnest in January 2023. EĀ chapters 1-15 were released in the first half of 2023.</p>
+    <p>In September, we shifted our focus to publishing all of our current translations to <a href="http://suttacentral.net" target="_blank">SuttaCentral</a>, which required three months to transfer the texts and create a process to update SuttaCentral monthly. Funding uncertainty also forced a re-evaluation of the project’s future plans, and the cover-to-cover translation of EĀ was abandoned for the time being.</p>
+    <hr style="margin-top: 2em; margin-bottom: 2em; margin-left: auto; margin-right: auto; width: 33%;" />
+  <h3>Phase 5: Continued Translation of Remaining Three Āgamas (2024)</h3>
+    <p>An additional year of funding was secured at the end of 2023. The plan for 2024 is to devote a third of the year to each of the remaining three Āgamas:</p>
+    <ul>
+      <li>January-April: Selections from the <cite>Saṃyukta Āgama</cite></li>
+      <li>May-August: Selections from the <cite>Madhyama Āgama</cite></li>
+      <li>September-December: Selections from the <cite>Ekottarika Āgama</cite></li>
+    </ul>
+    <p>During this time, we’ll also be working on publishing the <cite>Dīrgha Āgama</cite> as a book with the help of SuttaCentral.</p>
     <hr style="margin-top: 2em; margin-bottom: 2em;" />
+    <br/>
+    <br/>
+    <br/>
+    <br/>
 </article>
