--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>18-Jan-2024</dt>
+    <dd>Added <a href="01_agama/samyukta/01/SA1_53.html">SĀ 1.53 The Concept of Impermanence</a></dd>
   <dt>9-Jan-2024</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/samyukta/01/SA1_46.html">SĀ 1.46 Should Be Taught</a></dd>
