--- a/00_resources/pronunciation.html
+++ b/00_resources/pronunciation.html
@@ -4241,7 +4241,11 @@ base: ../
 </tr>
 
 <tr>
-  <td>沽 (~孤, 顧)<sup>3</sup></td><td>kuag (kag)</td><td>ko</td><td>ku</td><td>ku</td><td>gū</td><td><em>719>344</em></td>
+  <td>沽 (~孤, 顧)</td><td>kuag (kag)</td><td>ko</td><td>ku</td><td>ku</td><td>gū</td><td><em>719>344</em></td>
+</tr>
+
+<tr>
+  <td>陵</td><td>lɪəŋ</td><td>lɪəŋ</td><td>liəŋ</td><td>liəŋ</td><td>líng</td><td><em>1427</em></td>
 </tr>
 
 <!-- work zone
