--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>4-Feb-2024</dt>
+    <dd>Added <a href="01_agama/samyukta/01/SA1_48.html">SĀ 1.48 Bubbles and Foam</a></dd>
   <dt>1-Feb-2024</dt>
   <dd>Added <a href="01_agama/samyukta/02/SA2_221.html">SĀ 2.221 Nanda Teaches the Nuns</a></dd>
   <dt>22-Jan-2024</dt>
