--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,11 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>10-Feb-2024</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/samyukta/01/SA1_50.html">SĀ 1.50 Lack of Knowledge (2)</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_51.html">SĀ 1.51 The River Torrent</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_52.html">SĀ 1.52 Jeta’s Grove</a></dd>
   <dt>4-Feb-2024</dt>
     <dd>Added <a href="01_agama/samyukta/01/SA1_48.html">SĀ 1.48 Bubbles and Foam</a></dd>
   <dt>1-Feb-2024</dt>
