--- a/00_resources/pronunciation.html
+++ b/00_resources/pronunciation.html
@@ -4221,10 +4221,19 @@ base: ../
     <th align="left" width="16%">Pinyin</th>
     <th align="left" width="10%"><em>Gakken</em></th>
 
+    <tr>
+      <td>深</td><td>thiəm</td><td>ʃɪəm</td><td>ʃɪəm</td><td>ṣən</td><td>shēn</td><td><em>747</em></td>
+    </tr>
+    <tr>
+      <td>嗟</td><td>tsiăr</td><td>tsiă</td><td>tsie</td><td>ts̆ie</td><td>jiē, juē</td><td><em>246</em></td>
+    </tr>
+    <tr>
+      <td>閻</td><td>ɦiam</td><td>yiɛm</td><td>iem</td><td>ian</td><td>yán</td><td><em>1408</em></td>
+    </tr>
 
 <!-- work zone
-阿羅毘迦
-•a-la-bii-kă
+閻浮車
+yiɛm-bɪəu-tʃ‘ɪă
 -->
 </table>
 
