Cleanup of website and added new resources, other fixes.

--- a/resources.html
+++ b/resources.html
@@ -3,8 +3,21 @@ layout: default
 type: home
 title: Dharma Pearls | Resources
 ---
-<article class="home">
+<article class="resources">
 <h1>Resources</h1>
-<p>A number of resources will be added and built up as English translations are released. Many of these resources will mimick what is often found in the back matter of printed books: Indices, appendices, and glossaries. I'll also be writing reading guides, comparisons of Pali and Chinese texts, and the like as time permits.</p>
-<p>Currently, I'm focusing on adding entries to the Chinese-English glossary and creating a Pali-Chinese Index of Parallel Texts and Passages. As more material is released, I'll also create indices covering proper names, subjects, stock passages, and technical glosses. Initially, these resources are a secondary goal to translating the source material.</p>
+<p>A number of resources will be added and built up as English translations are released. These resources will be similar to what is often found in the back matter of printed books: Indices, appendices, and glossaries.</p>
+
+<hr/>
+
+<h3>List of Abbreviations</h3>
+
+<h3><a href="00_resources/glossary/index.html">A Companion Glossary of Terms and Proper Names</a></h3>
+
+<p>This glossary is a work in progress. Very little content is available at present, but terms will be added over time. It’s intended to help the reader understand the Buddhist vocabulary and proper names that are found in our translations. It will also include notes on the relationships that exist between Buddhist sources in different languages (mainly Chinese, Gandhari, Pali, and Sanskrit).</p>
+
+<h3><a href="00_resources\pronunciation.html">IPA Chinese Pronunciation Guide</a></h3>
+<p>This table is also a work in progress, but it has grown to several hundred entries. It documents the IPA pronunciations of Chinese characters at various points in Chinese history, which is crucial to understanding the transliterations found in Chinese Buddhist texts.</p>
+
+<hr/>
+
 </article>
