--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,17 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>17-Mar-2024</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/samyukta/02/SA2_9.html">SĀ 2.9 Free of Desire (2)</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_10.html">SĀ 2.10 Delight in Suffering</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_11-14.html">SĀ 2.11-14 Impermanent, Painful, Empty, and Not Self</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_15-39.html">SĀ 2.15-39 Everything</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_40.html">SĀ 2.40 Burning</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_41-48.html">SĀ 2.41-48 Rāhula (1-8)</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_49-56.html">SĀ 2.49-56 Rāhula (9-16)</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_57.html">SĀ 2.57 Rāhula (17)</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_58-74.html">SĀ 2.58-74 How to End the Contaminants, et al</a></dd>
   <dt>10-Feb-2024</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/samyukta/01/SA1_50.html">SĀ 1.50 Lack of Knowledge (2)</a></dd>
