--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,13 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>28-Mar-2024</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/samyukta/01/SA1_54.html">SĀ 1.54 Scolding Tiṣya</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_55.html">SĀ 1.55 Concepts</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_56.html">SĀ 1.56 Arising and Ceasing</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_57.html">SĀ 1.57 Delight</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_58.html">SĀ 1.58 Discernment</a></dd>
   <dt>17-Mar-2024</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/samyukta/02/SA2_9.html">SĀ 2.9 Free of Desire (2)</a></dd>
