--- a/00_resources/pronunciation.html
+++ b/00_resources/pronunciation.html
@@ -4236,10 +4236,16 @@ base: ../
     <tr>
       <td>突</td><td>duət</td><td>duət</td><td>t‘u</td><td>t‘u</td><td>tū</td><td><em>947>945</em></td>
     </tr>
+    <tr>
+      <td>彼</td><td>pɪar</td><td>pɪĕ</td><td>pi</td><td>pi</td><td>bǐ</td><td><em>442</em></td>
+    </tr>
+    <tr>
+      <td>㝹 (=羺)</td><td>?</td><td>~nu?</td><td>?</td><td>?</td><td>nóu</td><td><em>n/a</em></td>
+    </tr>
 
 <!-- work zone
-突目佉
-duət-mɪuk-k‘ɪo
+阿㝹羅
+•a-nu?-la
 -->
 </table>
 
