Converted sutras to bilingual format.

--- a/00_resources/pronunciation.html
+++ b/00_resources/pronunciation.html
@@ -4242,10 +4242,13 @@ base: ../
     <tr>
       <td>㝹 (=羺)</td><td>?</td><td>~nu?</td><td>?</td><td>?</td><td>nóu</td><td><em>n/a</em></td>
     </tr>
+    <tr>
+      <td>男</td><td>nəm</td><td>nəm (ndam)</td><td>nam</td><td>nan</td><td>nán</td><td><em>856</em></td>
+    </tr>
 
 <!-- work zone
-阿㝹羅
-•a-nu?-la
+摩訶男
+mua-ha-nəm
 -->
 </table>
 
