--- a/00_resources/pronunciation.html
+++ b/00_resources/pronunciation.html
@@ -25,7 +25,7 @@ base: ../
      
 <h4 class="left mar-vert-0 radindex">1: <a href="#r1">一</a> <a href="#r2">丨</a> <a href="#r3">丶</a> <a href="#r4">丿</a> <a href="#r5">乙</a> <a href="#r6">亅</a></h4>
 
-<h4 class="left mar-vert-0 radindex">2: <a href="#r7">二</a> <a href="#r8">亠</a> <a href="#r9">人</a> <a href="#r10">儿</a> <a href="#r11">入</a> <a href="#r12">八</a> <a href="#r13">冂</a> <a href="#r14">冖</a> <a href="#r15">冫</a> <a href="#r16">几</a> <a href="#r17">凵</a> <a href="#r18">刀</a> <a href="#r19">力</a> <!-- <a href="#r20">勹</a> <a href="#r21">匕</a> <a href="#r22">匚</a> <a href="#r23">匸</a> <a href="#r24">十</a> <a href="#r25">卜</a> <a href="#r26">卩</a> <a href="#r27">厂</a> --><a href="#r28">厶</a></h5>
+<h4 class="left mar-vert-0 radindex">2: <a href="#r7">二</a> <a href="#r8">亠</a> <a href="#r9">人</a> <a href="#r10">儿</a> <a href="#r11">入</a> <a href="#r12">八</a> <a href="#r13">冂</a> <a href="#r14">冖</a> <a href="#r15">冫</a> <a href="#r16">几</a> <a href="#r17">凵</a> <a href="#r18">刀</a> <a href="#r19">力</a> <!-- <a href="#r20">勹</a>--> <a href="#r21">匕</a> <!--<a href="#r22">匚</a> <a href="#r23">匸</a> <a href="#r24">十</a> <a href="#r25">卜</a> <a href="#r26">卩</a> <a href="#r27">厂</a> --><a href="#r28">厶</a></h5>
 
 <h4 class="left mar-vert-0 radindex">3: <!--<a href="#r29">29: 又</a> --><a href="#r30">口</a> <a href="#r31">囗</a> <a href="#r32">土</a> <!--<a href="#r33">士</a> <a href="#r34">夂</a> <a href="#r35">夊</a> --><a href="#r36">夕</a> <a href="#r37">大</a> <a href="#r38">女</a> <a href="#r39">子</a> <a href="#r40">宀</a> <!--<a href="#r41">寸</a> <a href="#r42">小</a> <a href="#r43">尢</a>--> <a href="#r44">尸</a> <!--<a href="#r45">屮</a> <a href="#r46">山</a> <a href="#r47">川</a> --> <a href="#r48">工</a> <!--<a href="#r49">己</a>--> <a href="#r50">巾</a> <!--<a href="#r51">干</a> <a href="#r52">幺</a>--> <a href="#r53">广</a> <a href="#r54">廴</a> <!--<a href="#r55">廾</a> <a href="#r56">弋</a> <a href="#r57">弓</a> <a href="#r58">彑</a> <a href="#r59">彡</a>--> <a href="#r60">彳</a></h4>
 
@@ -978,7 +978,7 @@ base: ../
     <th align="left" width="16%">EM</th>
     <th align="left" width="16%">Pinyin</th>
     <th align="left" width="10%"><em>Gakken</em></th>
-</table>
+</table>-->
  
 <h4 id="r21"><strong>Radical 21: 匕</strong></h4>
 
@@ -990,9 +990,13 @@ base: ../
     <th align="left" width="16%">EM</th>
     <th align="left" width="16%">Pinyin</th>
     <th align="left" width="10%"><em>Gakken</em></th>
+
+    <tr>
+      <td>匕</td><td>pier</td><td>pii</td><td>pi</td><td>pi</td><td>bǐ</td><td><em>168</em></td>
+    </tr>
 </table>
 
-<h4 id="r22"><strong>Radical 22: 匚</strong></h4>
+<!--<h4 id="r22"><strong>Radical 22: 匚</strong></h4>
 
 <table width="100%">
     <th align="left" width="10%">Char.</th>
@@ -4259,9 +4263,19 @@ base: ../
     <tr>
       <td>頻</td><td>bien</td><td>biĕn</td><td>p‘iən</td><td>p‘iən</td><td>pín</td><td><em>1475</em></td>
     </tr>
+    <tr>
+      <td>茨</td><td>dzier</td><td>dzii</td><td>t‘sï</td><td>t‘sï</td><td>cí</td><td><em>1103</em></td>
+    </tr>
+    <tr>
+      <td>悉</td><td>siet</td><td>siĕt</td><td>siəi</td><td>s̆i</td><td>xī</td><td><em>474</em></td>
+    </tr>
+    <tr>
+      <td>牢</td><td>log</td><td>lau</td><td>lau</td><td>lau</td><td>láo</td><td><em>813</em></td>
+    </tr>
 
 <!-- work zone
-
+薩牢
+sat-lau
 -->
 </table>
 
