--- a/00_resources/pronunciation.html
+++ b/00_resources/pronunciation.html
@@ -4272,10 +4272,13 @@ base: ../
     <tr>
       <td>牢</td><td>log</td><td>lau</td><td>lau</td><td>lau</td><td>láo</td><td><em>813</em></td>
     </tr>
+    <tr>
+      <td>魔</td><td>muar</td><td>mua (mbua)</td><td>muə</td><td>mo</td><td>mó</td><td><em>1523</em></td>
+    </tr>
 
 <!-- work zone
-薩牢
-sat-lau
+焔[摩迦
+yiɛm-mua-kă
 -->
 </table>
 
