--- a/whats-new.html
+++ b/whats-new.html
@@ -7,7 +7,7 @@ title: Dharma Pearls | What’s New
 <h1>What’s New</h1>
   <dl class="whats-new">
   <dt>16-Apr-2024</dt>
-    <dd><a href="01_agama/samyukta/01/SA1_178.html">SĀ 1.178 Satyaka</a></dd>
+    <dd>Added <a href="01_agama/samyukta/01/SA1_178.html">SĀ 1.178 Satyaka</a></dd>
   <dt>28-Mar-2024</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/samyukta/01/SA1_54.html">SĀ 1.54 Scolding Tiṣya</a></dd>
