--- a/00_resources/pronunciation.html
+++ b/00_resources/pronunciation.html
@@ -4275,10 +4275,16 @@ base: ../
     <tr>
       <td>魔</td><td>muar</td><td>mua (mbua)</td><td>muə</td><td>mo</td><td>mó</td><td><em>1523</em></td>
     </tr>
+    <tr>
+      <td>蜱 (陴)</td><td>bieg</td><td>biĕ</td><td>p‘i</td><td>p‘i</td><td>pí</td><td><em>?>1425</em></td>
+    </tr>
+    <tr>
+      <td>攝</td><td>thiap</td><td>ʃɪɛp</td><td>ʃɪe</td><td>ṣə</td><td>shè</td><td><em>546</em></td>
+    </tr>
 
 <!-- work zone
-焔[摩迦
-yiɛm-mua-kă
+斯惒提
+siĕ-ɦua-dei
 -->
 </table>
 
