--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>5-May-2024</dt>
+    <dd>Added <a href="01_agama/samyukta/26/SA26_11.html">SĀ 26.11 Haimavata</a></dd>
   <dt>16-Apr-2024</dt>
     <dd>Added <a href="01_agama/samyukta/01/SA1_178.html">SĀ 1.178 Satyaka</a></dd>
   <dt>28-Mar-2024</dt>
