--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,13 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>12-May-2024</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/samyukta/03/SA3_3.html">SĀ 3.3 Gautama</a></dd>
+    <dd><a href="01_agama/samyukta/03/SA3_4.html">SĀ 3.4 Gautama (2)</a></dd>
+    <dd><a href="01_agama/samyukta/03/SA3_5.html">SĀ 3.5 An Ancient City</a></dd>
+    <dd><a href="01_agama/samyukta/03/SA3_6.html">SĀ 3.6 Three Reeds</a></dd>
+    <dd><a href="01_agama/samyukta/03/SA3_7.html">SĀ 3.7 Untaught</a></dd>
   <dt>5-May-2024</dt>
     <dd>Added <a href="01_agama/samyukta/26/SA26_11.html">SĀ 26.11 Haimavata</a></dd>
   <dt>16-Apr-2024</dt>
