--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,18 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>27-May-2024</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/samyukta/04/SA4_2.html">SĀ 4.2 The Four Noble Truths</a></dd>
+    <dd><a href="01_agama/samyukta/04/SA4_3.html">SĀ 4.3 The Four Noble Truths (2)</a></dd>
+    <dd><a href="01_agama/samyukta/04/SA4_4.html">SĀ 4.4 The Four Noble Truths (3)</a></dd>
+    <dd><a href="01_agama/samyukta/04/SA4_5.html">SĀ 4.5 The Four Noble Truths (4)</a></dd>
+    <dd><a href="01_agama/samyukta/04/SA4_6.html">SĀ 4.6 The Four Noble Truths (5)</a></dd>
+    <dd><a href="01_agama/samyukta/04/SA4_7.html">SĀ 4.7 The Four Noble Truths (6)</a></dd>
+    <dd><a href="01_agama/samyukta/04/SA4_8.html">SĀ 4.8 The Four Noble Truths (7)</a></dd>
+    <dd><a href="01_agama/samyukta/04/SA4_9.html">SĀ 4.9 The Four Noble Truths (8)</a></dd>
+    <dd><a href="01_agama/samyukta/04/SA4_10.html">SĀ 4.10 The Four Noble Truths (9)</a></dd>
+    <dd><a href="01_agama/samyukta/04/SA4_11.html">SĀ 4.11 The King of Doctors</a></dd>
   <dt>12-May-2024</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/samyukta/03/SA3_3.html">SĀ 3.3 Gautama</a></dd>
