--- a/00_resources/pronunciation.html
+++ b/00_resources/pronunciation.html
@@ -4282,6 +4282,10 @@ base: ../
       <td>攝</td><td>thiap</td><td>ʃɪɛp</td><td>ʃɪe</td><td>ṣə</td><td>shè</td><td><em>546</em></td>
     </tr>
 
+    <tr>
+      <td>絺</td><td>t‘ɪei</td><td>ṭ‘ɪi</td><td>ṭṣ‘ï</td><td>ṭṣ‘ï</td><td>chī</td><td><em>1003</em></td>
+    </tr>
+
 <!-- work zone
 拘絺羅
 kɪu-?-la
