--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>28-May-2024</dt>
+    <dd>Added <a href="01_agama/madhyama/MA_029.html">MĀ 29 Mahākauṣṭhila</a></dd>
   <dt>27-May-2024</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/samyukta/04/SA4_2.html">SĀ 4.2 The Four Noble Truths</a></dd>
