--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>27-Jun-2024</dt>
+    <dd>Added <a href="01_agama/madhyama/MA_012.html">MĀ 12 Vāṣpa</a></dd>
   <dt>28-May-2024</dt>
     <dd>Added <a href="01_agama/madhyama/MA_029.html">MĀ 29 Mahākauṣṭhila</a></dd>
   <dt>27-May-2024</dt>
