--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,10 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>31-Jul-2024</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/madhyama/MA_041.html">MĀ 41 The Prominent Man Hastaka (2)</a></dd>
+    <dd><a href="01_agama/madhyama/MA_092.html">MĀ 92 The Analogy of the Blue and White Lotus Flowers</a></dd>
   <dt>27-Jun-2024</dt>
     <dd>Added <a href="01_agama/madhyama/MA_012.html">MĀ 12 Vāṣpa</a></dd>
   <dt>28-May-2024</dt>
