--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,9 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>1-Aug-2024</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/madhyama/MA_095.html">MĀ 95 Abiding in Qualities</a></dd>
   <dt>31-Jul-2024</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/madhyama/MA_041.html">MĀ 41 The Prominent Man Hastaka (2)</a></dd>
