Added MA 96, other minor edits

--- a/whats-new.html
+++ b/whats-new.html
@@ -9,6 +9,7 @@ title: Dharma Pearls | What’s New
   <dt>1-Aug-2024</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/madhyama/MA_095.html">MĀ 95 Abiding in Qualities</a></dd>
+    <dd><a href="01_agama/madhyama/MA_096.html">MĀ 96 Not Having</a></dd>
   <dt>31-Jul-2024</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/madhyama/MA_041.html">MĀ 41 The Prominent Man Hastaka (2)</a></dd>
