--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>2-Aug-2024</dt>
+    <dd>Added <a href="01_agama/madhyama/MA_106.html">MĀ 106 Conceptions</a></dd>
   <dt>1-Aug-2024</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/madhyama/MA_095.html">MĀ 95 Abiding in Qualities</a></dd>
