--- a/00_resources/pronunciation.html
+++ b/00_resources/pronunciation.html
@@ -4318,10 +4318,17 @@ base: ../
       <td>臘 (臈)</td><td>lap</td><td>lap</td><td>la</td><td>la</td><td>là</td><td><em>1072</em></td>
     </tr>
     
+    <tr>
+      <td>練</td><td>lān</td><td>len</td><td>lien</td><td>lian</td><td>liàn</td><td><em>1008</em></td>
+    </tr>
+
+    <tr>
+      <td>勒</td><td>lək</td><td>lək</td><td>ləi</td><td>ləi</td><td>lēi, lè</td><td><em>163</em></td>
+    </tr>
     
 <!-- work zone
-伽羅訶那
-
+訶梨勒
+ha-lɪi-lək
 -->
 </table>
 
