--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>20-Aug-2024</dt>
+    <dd>Added <a href="01_agama/madhyama/MA_013.html">MĀ 13 Crossings</a></dd>
   <dt>2-Aug-2024</dt>
     <dd>Added <a href="01_agama/madhyama/MA_106.html">MĀ 106 Conceptions</a></dd>
   <dt>1-Aug-2024</dt>
