Added MA 25 and 159

--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,10 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>21-Aug-2024</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/madhyama/MA_025.html">MĀ 25 Water Parables</a></dd>
+    <dd><a href="01_agama/madhyama/MA_159.html">MĀ 159 Agrahana</a></dd>
   <dt>20-Aug-2024</dt>
     <dd>Added <a href="01_agama/madhyama/MA_013.html">MĀ 13 Crossings</a></dd>
   <dt>2-Aug-2024</dt>
