Added MA 137, 139, and 140.

--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,11 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>31-Aug-2024</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/madhyama/MA_137.html">MĀ 137 The World</a></dd>
+    <dd><a href="01_agama/madhyama/MA_139.html">MĀ 139 The Path of Calming</a></dd>
+    <dd><a href="01_agama/madhyama/MA_140.html">MĀ 140 The Extreme</a></dd>
   <dt>21-Aug-2024</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/madhyama/MA_025.html">MĀ 25 Water Parables</a></dd>
