--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>13-Sep-2024</dt>
+    <dd>Added <a href="01_agama/samyukta/01/SA1_162.html">SĀ 1.162 Ānanda (2)</a></dd>
   <dt>31-Aug-2024</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/madhyama/MA_137.html">MĀ 137 The World</a></dd>
