--- a/whats-new.html
+++ b/whats-new.html
@@ -340,7 +340,7 @@ title: Dharma Pearls | What’s New
   <dt>21-May-2021</dt>
     <dd>Added <a href="01_agama/dirgha/DA_25.html">DĀ 25 The Naked Wanderer</a></dd>
   <dt>17-May-2021</dt>
-    <dd>Added <a href="01_agama/dirgha/DA_16.html">DĀ 16 Sujata</a></dd>
+    <dd>Added <a href="01_agama/dirgha/DA_16.html">DĀ 16 Sujāta</a></dd>
   <dt>29-Apr-2021</dt>
     <dd>Added <a href="01_agama/dirgha/DA_8.html">DĀ 8 Sandhāna</a></dd>
   <dt>25-Apr-2021</dt>
