Updated MA 2 and other minor corrections in DA 14, etc.

--- a/00_resources/pronunciation.html
+++ b/00_resources/pronunciation.html
@@ -4325,10 +4325,21 @@ base: ../
     <tr>
       <td>勒</td><td>lək</td><td>lək</td><td>ləi</td><td>ləi</td><td>lēi, lè</td><td><em>163</em></td>
     </tr>
+
+    <tr>
+      <td>呬 (= 戯?)</td><td>hɪar</td><td>hɪĕ</td><td>hi</td><td>s̆i</td><td>xì</td><td><em>(506)</em></td>
+    </tr>
+
+    <tr>
+      <td>般<sup>1</sup></td><td>buan</td><td>buan</td><td>p‘uon</td><td>pan</td><td>pán</td><td><em>1083</em></td>
+    </tr>
+    <tr>
+      <td>般<sup>2</sup></td><td>puăn</td><td>puăn</td><td>pan</td><td>pan</td><td>bān</td><td><em>1083</em></td>
+    </tr>
     
 <!-- work zone
-訶梨勒
-ha-lɪi-lək
+般遮翼
+
 -->
 </table>
 
