update to translation project overview

--- a/translations.html
+++ b/translations.html
@@ -9,20 +9,21 @@ title: Dharma Pearls | Translations
   <p>Below is a list of texts actively being translated:</p>
 
   <ul class="list-style-none">
-    <li><strong>Dharmaguptaka Sūtras</strong></li>
+    <li><strong>From the Dharmaguptaka Tripiṭaka:</strong></li>
     <ul class="list-style-disc no-indent">
       <li><a class="title" href="01_agama/dirgha/">The Long Discourses</a> (S. <em>Dīrgha-āgama</em>, T 1)</li>
       <li>Extracts from the <span class="title">Śāriputra Abhidharma</span> (T 1548)</li>
     </ul>
-    <li><strong>Sarvāstivāda Sūtras</strong></li>
+    <li><strong>From the Sarvāstivāda Tripiṭaka:</strong></li>
     <ul class="list-style-disc no-indent">
       <li><a class="title" href="01_agama/madhyama/">The Medium Discourses</a> (S. <em>Madhyama-āgama</em>, T 26)</li>
       <li><a class="title" href="01_agama/samyukta/">The Related Discourses</a> (S. <em>Saṃyukta-āgama</em>, T 99)</li>
     </ul>
-    <li><strong>Sūtras of Undetermined Provenance</strong></li>
+    <li><strong>Texts of Uncertain Provenance:</strong></li>
     <ul class="list-style-disc no-indent">
       <li><a class="title" href="01_agama/ekottarika/">The Numerical Discourses</a> (S. <em>Ekottarika-āgama</em>, T 125)</li>
-      <li><strong>Past Events</strong> (S. <em>Itivṛttaka</em>, T 765)</li>
+      <li>Selections from <a class="title" href="01_agama/samyukta2/">Another Translation of the Related Discourses</a> (S. <cite>Saṃyukta-āgama</cite>)</li>
+      <li>Selections from <strong>Past Events</strong> (S. <em>Itivṛttaka</em>, T 765)</li>
     </ul>
     <li><strong>Dharmapāda Texts</strong></li>
     <ul class="list-style-disc no-indent">
@@ -66,9 +67,8 @@ title: Dharma Pearls | Translations
     <ul>
       <li>January-April: Selections from the <cite>Saṃyukta Āgama</cite></li>
       <li>May-August: Selections from the <cite>Madhyama Āgama</cite></li>
-      <li>September-December: Selections from the <cite>Ekottarika Āgama</cite></li>
+      <li>September-December: [Changed to data maintenance, conversion, and editing tasks]</li>
     </ul>
-    <p>During this time, we’ll also be working on publishing the <cite>Dīrgha Āgama</cite> as a book with the help of SuttaCentral.</p>
     <hr style="margin-top: 2em; margin-bottom: 2em;" />
     <br/>
     <br/>
