Created a overall index of translations published on Dharma Pearls and reorganized files a bit.

--- a/translations.html
+++ b/translations.html
@@ -4,71 +4,91 @@ type: home
 title: Dharma Pearls | Translations
 ---
 <article class="home">
-  <h1>Current Translation Projects</h1>
-  <p>The first long-term goal of <em>Dharma Pearls</em> is to produce English translations of the four Chinese Āgama collections and select early Buddhist texts like the Chinese Dharmapāda from the <em>Taisho</em> canon.</p>
-  <p>Below is a list of texts actively being translated:</p>
+  <h1>List of Published Translations</h1>
+  
+  <hr/>
+  
+  <p>Below is a list of all the translations published so far here at Dharma Pearls, organized along the lines of the <cite>Taisho Daizokyo</cite>. The project Overview that was previous found at this URL <a href="project_overview.html">has moved to a new location</a>.</p>
 
+  <hr/>
+
+  <h2>The Āgamas</h2>
+  <p>This division of the <cite>Taisho</cite> contains the four Chinese Āgama collections grouped together with numerous other individual <em>sūtra</em>s that were identified as parallels. This division contains 151 texts.</p>
+
+  <h3>Dīrgha Āgama</h3>
   <ul class="list-style-none">
-    <li><strong>From the Dharmaguptaka Tripiṭaka:</strong></li>
-    <ul class="list-style-disc no-indent">
-      <li><a class="title" href="01_agama/dirgha/">The Long Discourses</a> (S. <em>Dīrgha-āgama</em>, T 1)</li>
-      <li>Extracts from the <span class="title">Śāriputra Abhidharma</span> (T 1548)</li>
-    </ul>
-    <li><strong>From the Sarvāstivāda Tripiṭaka:</strong></li>
-    <ul class="list-style-disc no-indent">
-      <li><a class="title" href="01_agama/madhyama/">The Medium Discourses</a> (S. <em>Madhyama-āgama</em>, T 26)</li>
-      <li><a class="title" href="01_agama/samyukta/">The Related Discourses</a> (S. <em>Saṃyukta-āgama</em>, T 99)</li>
-    </ul>
-    <li><strong>Texts of Uncertain Provenance:</strong></li>
-    <ul class="list-style-disc no-indent">
-      <li><a class="title" href="01_agama/ekottarika/">The Numerical Discourses</a> (S. <em>Ekottarika-āgama</em>, T 125)</li>
-      <li>Selections from <a class="title" href="01_agama/samyukta2/">Another Translation of the Related Discourses</a> (S. <cite>Saṃyukta-āgama</cite>)</li>
-      <li>Selections from <strong>Past Events</strong> (S. <em>Itivṛttaka</em>, T 765)</li>
-    </ul>
-    <li><strong>Dharmapāda Texts</strong></li>
-    <ul class="list-style-disc no-indent">
-      <li><strong>Dharma Verses</strong> (S. <em>Dharmapāda</em>, T 210)</li>
-      <li><a class="title" href="02_avadana/dharmapada/T211/">Dharma Verse Stories</a> (S. <em>*Dharmapāda Avadāna</em>, T 211)</li>
-      <li><strong>Illuminations</strong> (S. <em>Udāna</em>, T 212)</li>
-    </ul>
+    <li>T1: <a class="title" href="01_agama/dirgha/index.html">The Long Discourses</a> (30 <em>sūtra</em>s translated, 100% complete)</li>
   </ul>
-  <p>While there are many other early Buddhist texts in Chinese, this initial set of texts comprise a total of 1,422 pages of the Taisho, which will probably translate to around 1.7 million words of English. As a result, this project is expected to require <span style="text-decoration:line-through">several</span> many years to complete.</p>
-  <hr style="margin-top: 2em; margin-bottom: 2em;" />
-  <h2>Progress Report</h2>
-    <p>At the end of 2023, 25% of the Four Āgamas have been successfully translated and released in English. This includes:</p>
-    <ul>
-      <li>100% of the <cite>Dīrgha Āgama</cite></li>
-      <li>19% of the <cite>Madhyama Āgama</cite></li>
-      <li>8% of the <cite>Saṃyukta Āgama</cite></li>
-      <li>15% of the <cite>Ekottarika Āgama</cite></li>
-    </ul>
-    <p>In all, 292 pages of the <cite>Taisho</cite> have been translated, which is approximately 350,000 words of English (assuming 1 page = 1,200 words on average). </p>
-<hr style="margin-top: 2em; margin-bottom: 2em;" />
-  <h2>Project Roadmap</h2>
+  
+  <hr style="margin-top: 2em; margin-bottom: 2em; margin-left: auto; margin-right: auto; width: 33%;" />
 
-  <h3>Phase 1: Initial Study and Pilot Translations (2018-2019)</h3>
-    <p>The concept for this project arose in late 2018 and developed in early 2019 when I discovered my attempts to translate Āgama sutras in 2004-2005 were still preserved at SuttaCentral. I was already planning to begin translating Buddhist texts again, and I saw the need to update these old and error-prone translations.</p>
-    <p>Most of 2019 was spent becoming familiar with the language and vocabulary of each of the four Āgamas and pursuing background research, such as how they were translated to Chinese and other text critical issues (e.g., the disorganization of the <em>Samyuka Āgama</em>). In September, I created this Github website using the Jekyll platform.</p>
-<hr style="margin-top: 2em; margin-bottom: 2em; margin-left: auto; margin-right: auto; width: 33%;" />
-  <h3>Phase 2: <em>Madhyama Āgama</em> and Selected Parallels (2020)</h3>
-    <p>In early 2020, the project shifted to a concerted effort to translate the portion of the <em>Madhyama Āgama</em> that had yet to be published by <a href="https://bdkamerica.org/tripitaka-list/">BDK</a> (only <a href="https://bdkamerica.org/product/the-madhyama-agama-middle-length-discourses-volume-i/">Vol. I of their translation</a> was available at the time).
-    <p>Funding was secured for a full-time translation project in mid-2020. The initial goal was to translate the Chinese Āgama parallels for a selection of important Pali suttas. This work continued until 2021.</p>
-<hr style="margin-top: 2em; margin-bottom: 2em; margin-left: auto; margin-right: auto; width: 33%;" />
-  <h3>Phase 3: Translation of the <cite>Dīrgha Āgama</cite> (2021-2022)</h3>
-    <p>After the completion of the initial parallels translation, a more ambitious goal of translating the entire <em>Dīrgha Āgama</em> was approved, and funding was extended into 2022.</p>
-    <p>This phase of the project was completed in July 2022.</p>
-      <hr style="margin-top: 2em; margin-bottom: 2em; margin-left: auto; margin-right: auto; width: 33%;" />
-  <h3>Phase 4: Translation of the <em>Ekottarika Āgama</em> (2022-2023)</h3>
-    <p>With the completion of Phase 3, the Project moved its focus to the <em>Ekottarika Āgama</em>, beginning in earnest in January 2023. EĀ chapters 1-15 were released in the first half of 2023.</p>
-    <p>In September, we shifted our focus to publishing all of our current translations to <a href="http://suttacentral.net" target="_blank">SuttaCentral</a>, which required three months to transfer the texts and create a process to update SuttaCentral monthly. Funding uncertainty also forced a re-evaluation of the project’s future plans, and the cover-to-cover translation of EĀ was abandoned for the time being.</p>
-    <hr style="margin-top: 2em; margin-bottom: 2em; margin-left: auto; margin-right: auto; width: 33%;" />
-  <h3>Phase 5: Continued Translation of Remaining Three Āgamas (2024)</h3>
-    <p>An additional year of funding was secured at the end of 2023. The plan for 2024 is to devote a third of the year to each of the remaining three Āgamas:</p>
+  <h3>Madhyama Āgama</h3>
+  <ul class="list-style-none">
+    <li>T26: <a class="title" href="01_agama/madhyama/index.html">The Medium Discourses</a> (66 of 222 <em>sūtra</em>s translated, 22% complete)</li>
+  </ul>
+  
+  <hr style="margin-top: 2em; margin-bottom: 2em; margin-left: auto; margin-right: auto; width: 33%;" />
+
+  <h3>Saṃyukta Āgama</h3>
+  <ul class="list-style-none">
+    <li>T99: <a class="title" href="01_agama/samyukta/index.html">The Related Discourses</a> (172 of 1362 <em>sūtra</em>s, 13% complete)</li>
+    <li>T100: <a class="title" href="01_agama/samyukta2/index.html">Another Translation of the Related Discourses</a> (2 of 364 <em>sūtra</em>s)</li>
     <ul>
-      <li>January-April: Selections from the <cite>Saṃyukta Āgama</cite></li>
-      <li>May-August: Selections from the <cite>Madhyama Āgama</cite></li>
-      <li>September-December: [Changed to data maintenance, conversion, and editing tasks]</li>
+      <li>46. <a href="01_agama/samyukta2/SA2_46.html">The Eighth Day</a></li>
+      <li>180. <a href="01_agama/samyukta2/SA2_180.html">Crossing the Flood</a></li>
     </ul>
+    <li>T101: The Related Discourses (1 of 27 <em>sūtra</em>s)</li>
+    <ul>
+      <li>15. <a href="01_agama/samyukta3/T101_15.html">Mindfulness</a></li>
+    </ul>
+    <li>T102: <a href="01_agama/other/T102.html">The Five Aggregates Are Empty Sūtra</a></li>
+    <li>T109: <a href="01_agama/other/T109.html">Turning the Dharma Wheel Sūtra</a></li>
+    <li>T110: <a href="01_agama/other/T110.html">The Three Turnings of the Dharma Wheel Sūtra</a></li>
+    <li>T112: <a href="01_agama/other/T112.html">The Eightfold Right Path Sūtra</a></li>
+  </ul>
+  
+  <hr style="margin-top: 2em; margin-bottom: 2em; margin-left: auto; margin-right: auto; width: 33%;" />
+
+  <h3>Ekottarika Āgama</h3>
+  <ul class="list-style-none">
+    <li>T125: <a class="title" href="01_agama/ekottarika/index.html">The Numerical Discourses</a> (110 of 474 <em>sūtra</em>s, 15% complete)</li>
+  </ul> 
+
+  <hr/>
+
+  <h2>The Avadānas</h2>
+
+  <p>This division of the <cite>Taisho</cite> collects together Chinese translations of Buddhist lore and storytelling texts traditionally called <em>avādana</em>s and <em>jātaka</em>s. The material generally revolves around stories about the life and past lives of the Buddha and his disciples. Verse collections like the <em>Dharmapāda</em> are also included in this collection. There is a total of 68 texts, many of which are large collections of individual stories.</p>
+  
+  <ul class="list-style-none">
+    <li>T211: <a class="title" href="02_avadana/dharmapada/T211/index.html">Dharma Verse Stories</a> (39 chapters)</li>
+    <ul>
+      <li>Chapter 1: Impermanence</li>
+      <ul>
+        <li>1. <a href="02_avadana/dharmapada/T211/T211c1v1-2.html">Śakra Attains Stream Entry</a></li>
+        <li>2. <a href="02_avadana/dharmapada/T211/T211c1v3.html">King Prasenajit’s Queen</a></li>
+        <li>3. <a href="02_avadana/dharmapada/T211/T211c1v4-6.html">Like Cattle Led to Their Slaughter</a></li>
+      </ul>
+    </ul>
+  </ul> 
+
+  <hr/>
+
+  <h2>Other Sūtras</h2>
+
+  <p><em>Sūtra</em>s that didn’t fall into one of the first eight divisions of <em>sūtra</em> translations were collected together into this miscellaneous division. Some of these texts are actually <em>āgama sūtra</em>s that weren’t recognized at the time by the <cite>Taisho</cite> editors. One of the more significant of these parallels is Xuanzang’s translation of an entire <em>itivṛttaka</em> collection (T765 in the list below). There are 423 texts in this division.</p>
+  
+  <ul class="list-style-none">
+    <li>T757: <a class="title" href="09_other_sutras/T757.html">Hair-Raising Joy</a></li>
+    <li>T765: Past Events (1 of 137 <em>sūtra</em>s)</li>
+    <ul>
+      <li>83. <a href="09_other_sutras/T765/T765_83.html">The Search</a></li>
+    </ul>
+    <li>T780: <a class="title" href="09_other_sutras/T780.html">The Ten Powers</a></li>
+    <li>T781: <a class="title" href="09_other_sutras/T781.html">The Ten Powers</a></li>
+    <li>T802: <a class="title" href="09_other_sutras/T802.html">Confidence in the Knowledge Powers</a></li>
+  </ul> 
+
     <hr style="margin-top: 2em; margin-bottom: 2em;" />
     <br/>
     <br/>
