--- a/whats-new.html
+++ b/whats-new.html
@@ -475,21 +475,21 @@ title: Dharma Pearls | What’s New
     <dd>Added <a href="01_agama/ekottarika/19/EA_19_01.html">EĀ 19.1 Brahmā’s Request</a></dd>
   <dt>31-Aug-2020</dt>
     <dd>Translations added:</dd>
-    <dd><a href="03_samyukta/alternates/T112.html">T112 The Eightfold Right Path</a></dd>
-    <dd><a href="03_samyukta/alternates/T101_15.html">T101, Sūtra 15</a></dd>
+    <dd><a href="01_agama/other/T112.html">T112 The Eightfold Right Path</a></dd>
+    <dd><a href="01_agama/samyukta3/T101_15.html">T101, Sūtra 15</a></dd>
   <dt>29-Aug-2020</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/samyukta/01/SA1_148.html">SĀ 1.148 Sixteen Monks</a></dd>
     <dd><a href="01_agama/samyukta/01/SA1_149.html">SĀ 1.149 Self</a></dd>
-    <dd><a href="03_samyukta/alternates/T110.html">T110 The Three Turnings of the Dharma Wheel</a></dd>
+    <dd><a href="01_agama/other/T110.html">T110 The Three Turnings of the Dharma Wheel</a></dd>
   <dt>28-Aug-2020</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/samyukta/01/SA1_145.html">SĀ 1.145 The Aggregates Are Not Self</a></dd>
     <dd><a href="01_agama/samyukta/01/SA1_146.html">SĀ 1.146 The Aggregates Are Not Self (2)</a></dd>
     <dd><a href="01_agama/samyukta/01/SA1_147.html">SĀ 1.147 Three upright Men</a></dd>
-    <dd><a href="03_samyukta/alternates/T102.html">T102 The Five Aggregates Are Empty</a></dd>
+    <dd><a href="01_agama/other/T102.html">T102 The Five Aggregates Are Empty</a></dd>
   <dt>27-Aug-2020</dt>
-    <dd>Added <a href="03_samyukta/alternates/T109.html">T109 Turning the Dharma Wheel Sutra</a></dd>
+    <dd>Added <a href="01_agama/other/T109.html">T109 Turning the Dharma Wheel Sutra</a></dd>
   <dt>26-Aug-2020</dt>
     <dd>Added <a href="01_agama/madhyama/MA_204.html">MĀ 204 Raṃbhaka</a></dd>
   <dt>5-Aug-2020</dt>
