--- a/whats-new.html
+++ b/whats-new.html
@@ -6,7 +6,11 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+  <dt>15-Nov-2024</dt>
+  <dd><a href="01_agama/ekottarika/16/EA_16_04.html">EĀ 16.4 The Donkey</a></dd>
   <dt>9-Nov-2024</dt>
+  <dt>13-Nov-2024</dt>
+    <dd><a href="01_agama/ekottarika/16/EA_16_03.html">EĀ 16.3 The Crow</a></dd>
     <dd>Added <a href="01_agama/ekottarika/16/EA_16_02.html">EĀ 16.2 Nirvāṇa</a></dd>
   <dt>13-Sep-2024</dt>
     <dd>Added <a href="01_agama/samyukta/01/SA1_162.html">SĀ 1.162 Ānanda (2)</a></dd>
