--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,11 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+    <dt>25-Nov-2024</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/ekottarika/16/EA_16_08.html">EĀ 16.8 Acceptance and Consideration</a></dd>
+    <dd><a href="01_agama/ekottarika/16/EA_16_09.html">EĀ 16.9 The Brahmin</a></dd>
+    <dd><a href="01_agama/ekottarika/16/EA_16_10.html">EĀ 16.10 Rāhula</a></dd>
     <dt>20-Nov-2024</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/ekottarika/16/EA_16_05.html">EĀ 16.5 Unskillful</a></dd>
@@ -431,7 +436,7 @@ title: Dharma Pearls | What’s New
   <dt>11-Nov-2020</dt>
     <dd>Added <a href="01_agama/other/T757.html">T757 Hair-Raising Joy</a></dd>
   <dt>9-Nov-2020</dt>
-    <dd>Added <a href="01_agama/ekottarika/31/EA_31_08.html">EĀ 31.8 The Bodhisattva’s Austerities</a></dd>
+    <dd>Added <a href="01_agama/ekottarika/31/EA_31_08.html">EĀ 31.8 Meditation Without Breathing</a></dd>
   <dt>1-Nov-2020</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/samyukta/01/SA1_150.html">SĀ 1.150 Lowly</a></dd>
